--- a/game.libretro.gearboy/addon.xml.in
+++ b/game.libretro.gearboy/addon.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="game.libretro.gearboy"
 		name="Nintendo - Game Boy / Color (Gearboy)"
-		version="2.6.0.1"
+		version="2.6.0.2"
 		provider-name="Ignacio Sanchez">
 	<requires>
 		<import addon="game.libretro" version="1.0.0"/>
@@ -12,6 +12,7 @@
 		<extensions>gb|dmg|gbc|cgb|sgb</extensions>
 		<supports_vfs>true</supports_vfs>
 		<supports_standalone>false</supports_standalone>
+		<requires_opengl>false</requires_opengl>
 	</extension>
 	<extension point="xbmc.addon.metadata">
 		<license>GPLv3</license>
